--- a/server/web_front_container/style.css
+++ b/server/web_front_container/style.css
@@ -38,7 +38,6 @@ body {
     text-align: center;
     line-height: 50px;
     cursor: pointer;
-    z-index: 1;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
 }
 
@@ -47,7 +46,7 @@ body {
     align-items: flex-end;
     justify-content: center;
     margin-top: 100px;
-    z-index: 1;
+
     font-size: 24px;
     display: flex;
     justify-content: center;
@@ -150,13 +149,24 @@ body {
     font-weight: bold;
 }
 
-.container{
+.popupWindowWrapper {
+    z-index: 1001;
+    width:20%;
+    height:100%;
+    margin:0px auto;
+    padding:10%;
+}
+
+.popupWindow{
     margin: 0 auto;
-    position:relative;
+    position: fixed;
     align-items: flex-end;
     justify-content: center;
     width: 400px;
     margin-top: 20px;
+    overflow: hidden;
+    top:50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
     background: #fff;
     border-radius: 18px;
@@ -164,7 +174,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.container .description {
+.popupWindow .description {
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 20px;
@@ -174,7 +184,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.container img{
+.popupWindow img{
     margin: 0 auto;
     display: flex;
     align-items: flex-end;
@@ -184,7 +194,7 @@ body {
     object-fit: cover;
 }
 
-.container form{
+.popupWindow form{
     width: 50%;
 }
 
