--- a/server/web_front_container/style.css
+++ b/server/web_front_container/style.css
@@ -178,7 +178,6 @@ body {
 }
 
 .popupWindow{
-    margin: 0 auto;
     position: fixed;
     align-items: flex-end;
     justify-content: center;
@@ -205,7 +204,7 @@ body {
 .popupWindow img{
     margin: 0 auto;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     width: 50%;
     border-radius: 20px;
@@ -241,8 +240,6 @@ form h2{
 button.closebutton {
     width: 25px;
     height: 25px;
-    margin-left: 330px;
-    margin-top: 10px;
     background-image: url('src/7782773.png');
     background-size: cover;
     background-color: #ffffff;
@@ -296,4 +293,22 @@ button.form-control2:hover{
     color: #000000;
     border: solid 2px #E249B6;
     box-shadow: 0 10px 30px rgba(126, 5, 255, 0.5);
+}
+
+
+@media only screen and (max-width: 415px)  {
+    .popupWindow {
+        width: 350px;
+        height: 660px;
+}
+
+    .popupWindowWrapper {
+        z-index: 1;
+        position: fixed;
+        top: 47%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        animation: ani 0.7s forwards;
+    }
 }
