--- a/server/web_front_container/style.css
+++ b/server/web_front_container/style.css
@@ -299,15 +299,17 @@ button.form-control2:hover{
 @media only screen and (max-width: 415px)  {
     .popupWindow {
         width: 350px;
-        height: 660px;
-}
+        height: 650px;
+    }
 
-    .popupWindowWrapper {
-        z-index: 1;
-        position: fixed;
-        top: 47%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    .popupWindow img{
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 48%;
+        border-radius: 20px;
+        object-fit: cover;
         opacity: 0;
         animation: ani 0.7s forwards;
     }
